--- a/Stellar Classification (Smote, Scaled, hyperparamter tuning and ensemble).ipynb
+++ b/Stellar Classification (Smote, Scaled, hyperparamter tuning and ensemble).ipynb
@@ -1370,12 +1370,70 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "27725e22",
    "metadata": {},
+   "source": [
+    "We standardized our dataset using the StandardScaler module provided by the scikit-learn library."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "91d276a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['GALAXY' 'QSO' 'STAR']\n",
+      "[[ 0.9787894   0.91976676  0.37028242 -0.06163149 -0.12370325 -0.08587325]\n",
+      " [ 1.39479162  1.20552305  1.57026624  1.0672832   1.44833554  0.07218198]\n",
+      " [ 1.61949956  1.11927454  0.4879827   0.04145071 -0.03755926 -0.07557925]\n",
+      " ...\n",
+      " [-1.30056964 -1.7926897  -2.10111253 -2.20925649 -2.23187216 -0.78178907]\n",
+      " [ 0.18374298  0.00292935  0.20631057  0.36939554  0.4893328  -0.78067578]\n",
+      " [-0.12261271 -0.71847042 -1.16370433 -1.75148474 -2.00942122 -0.78106406]]\n",
+      "[0 0 0 ... 2 2 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "std = StandardScaler()\n",
+    "X = std.fit_transform(X)\n",
+    "le = LabelEncoder()\n",
+    "y = le.fit_transform(y)\n",
+    "print(le.classes_)\n",
+    "print(X)\n",
+    "print(y)\n",
+    "sdss_imp['class'] = le.fit_transform(sdss_imp['class'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6df28920",
+   "metadata": {},
+   "source": [
+    "Now We intend to divide our ultimate dataset into a 0.3 ratio, with 70% allocated for training data and 30% for testing data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "6b1fb412",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.metrics import confusion_matrix, accuracy_score, classification_report\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "from sklearn.svm import SVC\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.3, random_state = 42)"
+   ]
   }
  ],
  "metadata": {
