--- a/Stellar Classification (Smote, Scaled, hyperparamter tuning and ensemble).ipynb
+++ b/Stellar Classification (Smote, Scaled, hyperparamter tuning and ensemble).ipynb
@@ -703,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "1f7618b1",
    "metadata": {},
    "outputs": [],
@@ -714,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "f8c29dc4",
    "metadata": {},
    "outputs": [
@@ -881,7 +881,7 @@
        "[100000 rows x 7 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -900,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "d7bd23dd",
    "metadata": {},
    "outputs": [],
@@ -944,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "d9418294",
    "metadata": {},
    "outputs": [
@@ -973,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "5764355e",
    "metadata": {},
    "outputs": [
@@ -1037,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "id": "7eb8a788",
    "metadata": {},
    "outputs": [
@@ -1101,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "id": "f30f9f15",
    "metadata": {},
    "outputs": [
@@ -1173,7 +1173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "id": "079ad9e8",
    "metadata": {},
    "outputs": [],
@@ -1183,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "id": "6ff2536a",
    "metadata": {},
    "outputs": [
@@ -1209,7 +1209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "id": "a4cea2fa",
    "metadata": {},
    "outputs": [
@@ -1278,7 +1278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "id": "af6a69c1",
    "metadata": {},
    "outputs": [
@@ -1300,7 +1300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "id": "40630ac6",
    "metadata": {},
    "outputs": [
@@ -1340,7 +1340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "id": "fa581285",
    "metadata": {},
    "outputs": [],
@@ -1352,7 +1352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "id": "a6261433",
    "metadata": {},
    "outputs": [
@@ -1379,7 +1379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "id": "91d276a9",
    "metadata": {},
    "outputs": [
@@ -1402,8 +1402,8 @@
    "source": [
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.preprocessing import LabelEncoder\n",
-    "std = StandardScaler()\n",
-    "X = std.fit_transform(X)\n",
+    "stdscal = StandardScaler()\n",
+    "X = stdscal.fit_transform(X)\n",
     "le = LabelEncoder()\n",
     "y = le.fit_transform(y)\n",
     "print(le.classes_)\n",
@@ -1422,7 +1422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "id": "6b1fb412",
    "metadata": {},
    "outputs": [],
@@ -1433,6 +1433,90 @@
     "from sklearn.metrics import confusion_matrix\n",
     "from sklearn.svm import SVC\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.3, random_state = 42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "0287a47a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.discriminant_analysis import QuadraticDiscriminantAnalysis \n",
+    "from sklearn.linear_model import SGDClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "dec3f85d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RandomForestClassifier - accuracy: 0.9810657744715052\n",
+      "ExtraTreesClassifier - accuracy: 0.9814956729780752\n",
+      "LogisticRegression - accuracy: 0.9483187230145231\n",
+      "SVC - accuracy: 0.9633090970262238\n",
+      "KNeighborsClassifier - accuracy: 0.96900992504813\n",
+      "GaussianNB - accuracy: 0.9196650529896637\n",
+      "DecisionTreeClassifier - accuracy: 0.9708229752714903\n",
+      "AdaBoostClassifier - accuracy: 0.6612773593016953\n",
+      "GradientBoostingClassifier - accuracy: 0.9695706622306125\n",
+      "BaggingClassifier - accuracy: 0.9786546045868302\n",
+      "MLPClassifier - accuracy: 0.9722248182276967\n",
+      "XGBClassifier - accuracy: 0.9769350105605503\n",
+      "SGDClassifier - accuracy: 0.906431655483075\n",
+      "QuadraticDiscriminantAnalysis - accuracy: 0.949178520027663\n",
+      "The best performing model is: ExtraTreesClassifier with accuracy: 0.9814956729780752\n"
+     ]
+    }
+   ],
+   "source": [
+    "classifiers = [\n",
+    "    RandomForestClassifier(),\n",
+    "    ExtraTreesClassifier(),\n",
+    "    LogisticRegression(),\n",
+    "    SVC(),\n",
+    "    KNeighborsClassifier(),\n",
+    "    GaussianNB(),\n",
+    "    DecisionTreeClassifier(),\n",
+    "    AdaBoostClassifier(),\n",
+    "    GradientBoostingClassifier(),\n",
+    "    BaggingClassifier(),\n",
+    "    MLPClassifier(),\n",
+    "    XGBClassifier(),\n",
+    "    SGDClassifier(),\n",
+    "    QuadraticDiscriminantAnalysis()\n",
+    "]\n",
+    "best_model = None\n",
+    "best_accuracy = 0\n",
+    "from sklearn.pipeline import make_pipeline\n",
+    "for classifier in classifiers:\n",
+    "    pipeline = make_pipeline(StandardScaler(), classifier)\n",
+    "    pipeline.fit(X_train, y_train)\n",
+    "    \n",
+    "    y_pred = pipeline.predict(X_test)\n",
+    "    \n",
+    "    accuracy = accuracy_score(y_test, y_pred)\n",
+    "\n",
+    "    if accuracy > best_accuracy:\n",
+    "        best_accuracy = accuracy\n",
+    "        best_model = classifier.__class__.__name__\n",
+    "\n",
+    "    print(f\"{classifier.__class__.__name__} - accuracy: {accuracy}\")\n",
+    "    \n",
+    "print(f\"The best performing model is: {best_model} with accuracy: {best_accuracy}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "18634f03",
+   "metadata": {},
+   "source": [
+    "In our primary evaluation the best performing model is ExtraTreesClassifier with accuracy 98.15%. RandomForestClassifier, BaggingClassifier, XGBClassifier and MLPClassifier are the 2nd, 3rd, 4th and 5th best performing model respectively. "
    ]
   }
  ],
