--- a/Stellar Classification (Smote, Scaled, hyperparamter tuning and ensemble).ipynb
+++ b/Stellar Classification (Smote, Scaled, hyperparamter tuning and ensemble).ipynb
@@ -1456,21 +1456,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RandomForestClassifier - accuracy: 0.9810657744715052\n",
-      "ExtraTreesClassifier - accuracy: 0.9814956729780752\n",
+      "RandomForestClassifier - accuracy: 0.9808227883590961\n",
+      "ExtraTreesClassifier - accuracy: 0.9820751013999738\n",
       "LogisticRegression - accuracy: 0.9483187230145231\n",
       "SVC - accuracy: 0.9633090970262238\n",
       "KNeighborsClassifier - accuracy: 0.96900992504813\n",
       "GaussianNB - accuracy: 0.9196650529896637\n",
-      "DecisionTreeClassifier - accuracy: 0.9708229752714903\n",
+      "DecisionTreeClassifier - accuracy: 0.9712341825386441\n",
       "AdaBoostClassifier - accuracy: 0.6612773593016953\n",
       "GradientBoostingClassifier - accuracy: 0.9695706622306125\n",
-      "BaggingClassifier - accuracy: 0.9786546045868302\n",
-      "MLPClassifier - accuracy: 0.9722248182276967\n",
+      "BaggingClassifier - accuracy: 0.9793087979663931\n",
+      "MLPClassifier - accuracy: 0.9717388460028784\n",
       "XGBClassifier - accuracy: 0.9769350105605503\n",
-      "SGDClassifier - accuracy: 0.906431655483075\n",
+      "SGDClassifier - accuracy: 0.9068989364684772\n",
       "QuadraticDiscriminantAnalysis - accuracy: 0.949178520027663\n",
-      "The best performing model is: ExtraTreesClassifier with accuracy: 0.9814956729780752\n"
+      "The best performing model is: ExtraTreesClassifier with accuracy: 0.9820751013999738\n"
      ]
     }
    ],
@@ -1521,7 +1521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "id": "fec4dc13",
    "metadata": {},
    "outputs": [
@@ -1586,7 +1586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 33,
    "id": "30ab8c3e",
    "metadata": {},
    "outputs": [],
@@ -1604,7 +1604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 34,
    "id": "1d7f715d",
    "metadata": {},
    "outputs": [
@@ -1638,7 +1638,7 @@
        "                   random_state=42)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1649,7 +1649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 35,
    "id": "1a6dae9e",
    "metadata": {},
    "outputs": [
@@ -1670,7 +1670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 36,
    "id": "be0ecfad",
    "metadata": {},
    "outputs": [],
@@ -1680,7 +1680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 37,
    "id": "6ef4cc32",
    "metadata": {},
    "outputs": [
@@ -1732,7 +1732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 38,
    "id": "c747bb1f",
    "metadata": {},
    "outputs": [],
@@ -1750,7 +1750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 39,
    "id": "0949d475",
    "metadata": {},
    "outputs": [
@@ -1784,7 +1784,7 @@
        "                   random_state=42)"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1795,7 +1795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 40,
    "id": "717aa74b",
    "metadata": {},
    "outputs": [
@@ -1816,7 +1816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 41,
    "id": "a15fd143",
    "metadata": {},
    "outputs": [
@@ -1877,7 +1877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 42,
    "id": "8d5a392b",
    "metadata": {},
    "outputs": [
@@ -1932,7 +1932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 43,
    "id": "1b9103a9",
    "metadata": {},
    "outputs": [
@@ -1969,7 +1969,7 @@
        "                   random_state=42)"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1990,7 +1990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 44,
    "id": "3f63dba8",
    "metadata": {},
    "outputs": [
@@ -2010,7 +2010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 45,
    "id": "5f931eba",
    "metadata": {},
    "outputs": [
@@ -2070,9 +2070,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4b1ce3d9",
+   "metadata": {},
+   "source": [
+    "We will now proceed with the hyperparameter tuning process for BaggingClassifier by employing RandomizedSearchCV."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b1ce3d9",
+   "id": "11ec1ea9",
    "metadata": {},
    "outputs": [],
    "source": []
