--- a/Stellar Classification (Smote, Scaled, hyperparamter tuning and ensemble).ipynb
+++ b/Stellar Classification (Smote, Scaled, hyperparamter tuning and ensemble).ipynb
@@ -3775,6 +3775,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8f294dfe",
+   "metadata": {},
+   "source": [
+    "Now we will use the best six machine learning techniques (aacording to accuracy) with different effective combination to build our ensemble. We will use voting classifier to increse our accuracy. We check both the soft and hard voting method."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 189,
    "id": "24102580",
