--- a/Stellar Classification (Smote, Scaled, hyperparamter tuning and ensemble).ipynb
+++ b/Stellar Classification (Smote, Scaled, hyperparamter tuning and ensemble).ipynb
@@ -3753,7 +3753,7 @@
     "print(\"Accuracy using Extra Trees Classifier(random_state=42):\", accuracy_etc)\n",
     "print(\"Accuracy using Extra Trees Classifier (Tuned):\", accuracy_best_etc_model)\n",
     "print(\"Accuracy using Bagging Classifier(random_state=42):\", accuracy_bc)\n",
-    "print(\"Accuracy using Extra Trees Classifier (Tuned):\", accuracy_best_bc_model)\n",
+    "print(\"Accuracy using Bagging Classifier (Tuned):\", accuracy_best_bc_model)\n",
     "print(\"Accuracy using MLPClassifier (random_state=42):\", accuracy_mlp)\n",
     "print(\"Accuracy using MLP Classifier (Tuned):\", accuracy_best_mlp_model)\n",
     "print(\"Accuracy using XGBClassifier (random_state=42):\", accuracy_xgb)\n",
